--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(lfu VERSION 0.1.0)
 
+include(FindPkgConfig)
+
 find_package(LLVM REQUIRED)
 
 if (LLVM_FOUND)
@@ -24,6 +26,14 @@ target_link_libraries(lfu PUBLIC unicorn)
 target_link_libraries(lfu PRIVATE "${LLVM_LIBRARY_DIRS}/clang/${LLVM_VERSION}/lib/libclang_rt.fuzzer_no_main-x86_64.a")
 
 target_compile_features(lfu PRIVATE cxx_std_17)
+
+pkg_check_modules (CAPSTONE REQUIRED capstone)
+if (CAPSTONE_FOUND)
+  target_link_libraries(lfu PRIVATE ${CAPSTONE_LIBRARIES})
+  target_include_directories(lfu PRIVATE ${CAPSTONE_INCLUDE_DIRS})
+else()
+  message(FATAL_ERROR "You need capstone to build this.")
+endif()
 
 add_custom_command(
     TARGET lfu POST_BUILD
