--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ add_library(lfu SHARED
     src/lfu.cpp
     src/allocator.cpp
     src/coverage.cpp
+    src/crash_collector.cpp
     src/abi.cpp
 )
 
